# concatenador

./: .gitignore  CMakeLists.txt  README.md  main.cpp  teste-concatenador.ps1  vcpkg.json
